@@ -2,6 +2,7 @@ package edu.tlu.jobplatform.subscription.infrastructure.persistence.adapter;
 
 import edu.tlu.jobplatform.subscription.domain.model.*;
 import edu.tlu.jobplatform.subscription.domain.repository.*;
+import edu.tlu.jobplatform.subscription.infrastructure.persistence.entity.SubscriptionPlanJpaEntity;
 import edu.tlu.jobplatform.subscription.infrastructure.persistence.mapper.SubscriptionMapper;
 import edu.tlu.jobplatform.subscription.infrastructure.persistence.repository.*;
 import lombok.RequiredArgsConstructor;
@@ -10,9 +11,8 @@ import org.springframework.stereotype.Component;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
-// ── SubscriptionPlan Adapter ──────────────────────────────────
+// ── SubscriptionPlanRepositoryAdapter ────────────────────────────
 
 @Component
 @RequiredArgsConstructor
@@ -23,8 +23,8 @@ public class SubscriptionPlanRepositoryAdapter implements SubscriptionPlanReposi
 
     @Override
     public List<SubscriptionPlan> findAllActive() {
-        return jpaRepo.findByIsActiveTrueOrderByDisplayOrderAsc()
-                .stream().map(mapper::toPlanDomain).collect(Collectors.toList());
+        return jpaRepo.findByIsActiveTrueOrderByPriceMonthlyAsc()
+                .stream().map(mapper::toPlanDomain).toList();
     }
 
     @Override
@@ -39,6 +39,27 @@ public class SubscriptionPlanRepositoryAdapter implements SubscriptionPlanReposi
 
     @Override
     public SubscriptionPlan save(SubscriptionPlan p) {
-        return mapper.toPlanDomain(jpaRepo.save(mapper.toPlanEntity(p)));
+        if (p.getId() != null) {
+            Optional<SubscriptionPlanJpaEntity> existing = jpaRepo.findById(p.getId());
+            if (existing.isPresent()) {
+                SubscriptionPlanJpaEntity e = existing.get();
+                e.setCode(p.getCode());
+                e.setName(p.getName());
+                e.setDescription(p.getDescription());
+                e.setPriceMonthly(p.getPriceMonthly());
+                e.setPriceYearly(p.getPriceYearly());
+                e.setJobPostLimit(p.getJobPostLimit());
+                e.setFeaturedJobLimit(p.getFeaturedJobLimit());
+                e.setCvViewLimit(p.getCvViewLimit());
+                e.setAiFeatures(p.isAiFeatures());
+                e.setAnalyticsAccess(p.isAnalyticsAccess());
+                e.setDurationDays(p.getDurationDays());
+                e.setIsActive(p.isActive());
+                return mapper.toPlanDomain(jpaRepo.save(e));
+            }
+        }
+
+        SubscriptionPlanJpaEntity newEntity = mapper.toPlanEntity(p);
+        return mapper.toPlanDomain(jpaRepo.save(newEntity));
     }
 }
